--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -15,7 +15,7 @@ author_profile: true
 
 <h2>Current projects x</h2>
 {% for post in site.projects %}
-{% for tag in page.active %}
+{% for tag in post.active %}
 {% if tag == "current" %}
 {% include archive-single.html %}
 {% endif %}
