--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -13,7 +13,7 @@ author_profile: true
 {% endfor %}
 
 
-<h2>Current projects x</h2>
+<h2>Current projects</h2>
 {% for post in site.projects %}
 {% for tag in post.active %}
 {% if tag == "current" %}
