--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -22,7 +22,7 @@ author_profile: true
 {% for post in site.projects %}
 {% for tag in post.active %}
 {% if tag == "past" %}
-{% include archive-single.html %}
+{% include archive-single-compact.html %}
 {% endif %}
 {% endfor %}
 {% endfor %}
