--- a/_pages/research.html
+++ b/_pages/research.html
@@ -16,7 +16,7 @@ individual's specific impairment, and the lack of available data with which to t
 computational models.
 
 
-<h2>Automatic speech recognition for atypical voices} </h2>
+<h2>Automatic speech recognition for atypical voices </h2>
 Sheffield has a long-standard track record in this area. We were the first to introduce more mainstream techniques
 like deep-learning to improve performance (e.g., Christensen *et al*, 2012; Christensen *et al*, 2013a; Christensen
 *et al*, 2013b). I implemented an *online system that we deployed in people's houses long-term. This was the
