--- a/_pages/team.html
+++ b/_pages/team.html
@@ -12,7 +12,7 @@ author_profile: true
 {% for post in site.team %}
 {% for tag in post.active %}
 {% if tag == "current" %}
-{% include archive-single-compact.html %}
+{% include archive-single-compact-team.html %}
 {% endif %}
 {% endfor %}
 {% endfor %}
@@ -22,7 +22,7 @@ author_profile: true
 {% for post in site.team %}
 {% for tag in post.active %}
 {% if tag == "past" %}
-{% include archive-single-compact.html %}
+{% include archive-single-compact-team.html %}
 {% endif %}
 {% endfor %}
 {% endfor %}
