--- a/_pages/team.html
+++ b/_pages/team.html
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 
-<h2>Current xTeam Members</h2>
+<h2>Current Team Members</h2>
 {% for post in site.team %}
 {% for tag in post.active %}
 {% if tag == "current" %}
