--- a/_pages/research.html
+++ b/_pages/research.html
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 
-I lead a growing team of researchers working on the application of speech and audio technology to healthcare. This is an
+I lead a growing team of researchers working on the application of speech and audio technology in healthcare. This is an
 expanding but challenging field of study with great potential for translational research and real impact for people.
 Recent advances in mainstream speech recognition and understanding are only partially applicable and portable to the
 healthcare domain because of the confounding challenges posed by the need for personalised technology tailored to an
@@ -19,12 +19,12 @@ computational models.
 <h2>Automatic speech recognition for atypical voices </h2>
 Sheffield has a long-standard track record in this area. We were the first to introduce more mainstream techniques
 like deep-learning to improve performance (e.g., Christensen *et al*, 2012; Christensen *et al*, 2013a; Christensen
-*et al*, 2013b). I implemented an *online system that we deployed in people's houses long-term. This was the
-demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and my work
-enabled us to demonstrate state-of-the-art performance for the users. We have subsequently made the collected database
-public (e.g., (Green *et al*, 2016; Nicolao *et al*, 2016; Malavasi *et al*, 2016). We extended this work (Google
-Research Award) by exploring the use of deep-learning to obtain articulatory representations (Xiong *et al*, 2018, 2019,
-2020). Currently, an ESR on the H2020 ITN-ETN TAPAS ESRs works on improving \textsl{continuous} dysarthric speech
+*et al*, 2013b). In the [homeService](projects/homeService) we implemented an online system that we deployed in people's houses long-term. This was the
+demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able us 
+to demonstrate state-of-the-art performance for the users. We have subsequently made the collected database
+[public](http://mini.dcs.shef.ac.uk/resources/homeservice-corpus): (e.g., Green *et al*, 2016; Nicolao *et al*, 2016; Malavasi *et al*, 2016). We extended this work (Google
+Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory representations (Xiong *et al*, 2018, 2019,
+2020). Currently, an ESR on the H2020 ITN-ETN [TAPAS](projects/current/tapas) ESRs works on improving continuous dysarthric speech
 recognition (Yue *et al*, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition and
 detection of linguistic as well as paralinguistic information in speech (Alhinti *et al*, 2018, 2020a, 2020b)
 
