--- a/_pages/research.html
+++ b/_pages/research.html
@@ -37,16 +37,12 @@ As part of a multi-disciplinary team
 involving neuroscientists, neuropsychologists, a clinical linguist and a general practitioner, I have led the technical
 work on developing a stratification test for people with memory concerns where a virtual agent asks memory-probing
 questions and the underlying speech analysis and machine learning looks for signs of neurodegenerative dementia in a
-person's speech and language (Mirheidari *et al*, 2016; 2017a; 2017b; 2018, 2019, 2020). In 2016, I was part of a team
-of experts that was funded to host a team of researchers for 6 weeks at the prestigious Fred Jelinek Memorial Workshop
-at John Hopkins University. The topic was "Remote Monitoring of Neurodegeneration through Speech" and focused on the
-automatic detection of Parkinson's and Alzheimer's disease (Orozco-Arroyave *et al*, 2018; Cernak *et al*, 2017a;
-2017b). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
+person's speech and language (Mirheidari *et al*, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
 2020a, 2020b). In 2019 Blackburn and myself received the Rosetrees Trust Interdisciplinary Prize for AI and medicine to
-port this technology to work for assessing cognitive health for stroke survivors. In 2019, we took the
-<a href=www.cognospeak.org>CognoSpeak</a> system to Kenya to work with a local neurologist (GRCF pump priming funds) to
+port this technology to work for assessing cognitive health for stroke survivors, [COMPASS](projects/current/compass). In 2019, we took the
+<a href=www.cognospeak.org>CognoSpeak</a> system to [Kenya](projects/current/kenya) to work with a local neurologist (GRCF pump priming funds) to
 begin work on exploring how to make the underpinning speech analytics more language-agnostic. Recently, I have started
-working with Thomas, one of the first CDT cohort on a PhD collaboration with Apple on speech and language-based
+working with Thomas, one of the CDT students on a PhD collaboration with Apple on speech and language-based
 automatic tracking of depression and enxiety. Related, my PhD student Attas is developing a system for automatically
 analysing psychotherapy-client sessions with the aim of detecting clues for potential rupture. Wider applications of the
 use of conversational agents in therapy include a motivational system for people with COPS that was co-created and had
