--- a/_pages/research.html
+++ b/_pages/research.html
@@ -18,15 +18,15 @@ computational models.
 
 <h2>Automatic speech recognition for atypical voices </h2>
 Sheffield has a long-standard track record in this area. We were the first to introduce more mainstream techniques
-like deep-learning to improve performance (e.g., Christensen *et al*, 2012; Christensen *et al*, 2013a; Christensen
-*et al*, 2013b). In the [homeService](projects/homeService) we implemented an online system that we deployed in people's houses long-term. This was the
+like deep-learning to improve performance (e.g., Christensen <il>et al</il>, 2012; Christensen <il>et al</il>, 2013a; Christensen
+<il>et al</il>, 2013b). In the [homeService](projects/homeService) we implemented an online system that we deployed in people's houses long-term. This was the
 demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able us 
 to demonstrate state-of-the-art performance for the users. We have subsequently made the collected database
-[public](http://mini.dcs.shef.ac.uk/resources/homeservice-corpus): (e.g., Green *et al*, 2016; Nicolao *et al*, 2016; Malavasi *et al*, 2016). We extended this work (Google
-Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory representations (Xiong *et al*, 2018, 2019,
+[public](http://mini.dcs.shef.ac.uk/resources/homeservice-corpus): (e.g., Green <il>et al</il>, 2016; Nicolao <il>et al</il>, 2016; Malavasi <il>et al</il>, 2016). We extended this work (Google
+Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory representations (Xiong <il>et al</il>, 2018, 2019,
 2020). Currently, an ESR on the H2020 ITN-ETN [TAPAS](projects/current/tapas) ESRs works on improving continuous dysarthric speech
-recognition (Yue *et al*, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition and
-detection of linguistic as well as paralinguistic information in speech (Alhinti *et al*, 2018, 2020a, 2020b)
+recognition (Yue <il>et al</il>, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition and
+detection of linguistic as well as paralinguistic information in speech (Alhinti <il>et al</il>, 2018, 2020a, 2020b)
 
 Funded
 by EU, Google, MRC (Confidence in Concept) Round 3
@@ -37,7 +37,7 @@ As part of a multi-disciplinary team
 involving neuroscientists, neuropsychologists, a clinical linguist and a general practitioner, I have led the technical
 work on developing a stratification test for people with memory concerns where a virtual agent asks memory-probing
 questions and the underlying speech analysis and machine learning looks for signs of neurodegenerative dementia in a
-person's speech and language (Mirheidari *et al*, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
+person's speech and language (Mirheidari <il>et al</il>, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
 2020a, 2020b). In 2019 Blackburn and myself received the Rosetrees Trust Interdisciplinary Prize for AI and medicine to
 port this technology to work for assessing cognitive health for stroke survivors, [COMPASS](projects/current/compass). In 2019, we took the
 <a href=www.cognospeak.org>CognoSpeak</a> system to [Kenya](projects/current/kenya) to work with a local neurologist (GRCF pump priming funds) to
@@ -46,9 +46,8 @@ working with Thomas, one of the CDT students on a PhD collaboration with Apple o
 automatic tracking of depression and enxiety. Related, my PhD student Attas is developing a system for automatically
 analysing psychotherapy-client sessions with the aim of detecting clues for potential rupture. Wider applications of the
 use of conversational agents in therapy include a motivational system for people with COPS that was co-created and had
-an initial evaluation of a prototype system (Easton *et al* 2020), and the exploration of a similar system for creating
-an empathy AI agent for online peer-mediated mental health intervention (Easton *et al*, *in
-preparation*).
+an initial evaluation of a prototype system (Easton <il>et al</il> 2020), and the exploration of a similar system for creating
+an empathy AI agent for online peer-mediated mental health intervention (Easton <il>et al</il>, <il>in preparation</il>).
 
 Funded by EU, John Hopkins workshop grant, MRC (Confidence in Concept) Round 6, Rosetrees Trust, CLARHC
 and SHSC RCF NIHR.
