--- a/_pages/research.html
+++ b/_pages/research.html
@@ -19,7 +19,7 @@ computational models.
 <h2>Automatic speech recognition for atypical voices </h2>
 Sheffield has a long-standard track record in this area. We were the first to introduce more mainstream techniques
 like deep-learning to improve performance (e.g., Christensen <il>et al</il>, 2012; Christensen <il>et al</il>, 2013a; Christensen
-<il>et al</il>, 2013b). In the [homeService](projects/homeService) we implemented an online system that we deployed in people's houses long-term. This was the
+<il>et al</il>, 2013b). In the <a href="projects/past/homeService">homeService</a>) we implemented an online system that we deployed in people's houses long-term. This was the
 demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able us 
 to demonstrate state-of-the-art performance for the users. We have subsequently made the collected database
 [public](http://mini.dcs.shef.ac.uk/resources/homeservice-corpus): (e.g., Green <il>et al</il>, 2016; Nicolao <il>et al</il>, 2016; Malavasi <il>et al</il>, 2016). We extended this work (Google
