--- a/_pages/research.html
+++ b/_pages/research.html
@@ -25,7 +25,7 @@ to demonstrate state-of-the-art performance for the users. We have subsequently 
 <a href="http://mini.dcs.shef.ac.uk/resources/homeservice-corpus">public</a>): (e.g., Green <i>et al</i>, 2016; Nicolao <i>et al</i>, 2016; Malavasi <i>et al</i>, 2016). We extended this work (Google
 Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory representations (Xiong <i>et al</i>, 2018, 2019,
 2020). Currently, an ESR on the H2020 ITN-ETN <a href="projects/current/tapas">TAPAS</a> ESRs works on improving continuous dysarthric speech
-recognition (Yue <il>et al</il>, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition and
+recognition (Yue <i>et al</i>, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition and
 detection of linguistic as well as paralinguistic information in speech (Alhinti <i>et al</i>, 2018, 2020a, 2020b)
 
 Funded
@@ -37,7 +37,7 @@ As part of a multi-disciplinary team
 involving neuroscientists, neuropsychologists, a clinical linguist and a general practitioner, I have led the technical
 work on developing a stratification test for people with memory concerns where a virtual agent asks memory-probing
 questions and the underlying speech analysis and machine learning looks for signs of neurodegenerative dementia in a
-person's speech and language (Mirheidari <il>et al</il>, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
+person's speech and language (Mirheidari <i>et al</i>, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
 2020a, 2020b). In 2019 Blackburn and myself received the Rosetrees Trust Interdisciplinary Prize for AI and medicine to
 port this technology to work for assessing cognitive health for stroke survivors, [<a href="projects/current/compass">COMPASS</a>. In 2019, we took the
 <a href=www.cognospeak.org>CognoSpeak</a> system to <a href="projects/current/kenya">Kenya"</a> to work with a local neurologist (GRCF pump priming funds) to
@@ -46,8 +46,8 @@ working with Thomas, one of the CDT students on a PhD collaboration with Apple o
 automatic tracking of depression and enxiety. Related, my PhD student Attas is developing a system for automatically
 analysing psychotherapy-client sessions with the aim of detecting clues for potential rupture. Wider applications of the
 use of conversational agents in therapy include a motivational system for people with COPS that was co-created and had
-an initial evaluation of a prototype system (Easton <il>et al</il> 2020), and the exploration of a similar system for creating
-an empathy AI agent for online peer-mediated mental health intervention (Easton <il>et al</il>, <il>in preparation</il>).
+an initial evaluation of a prototype system (Easton <i>et al</i> 2020), and the exploration of a similar system for creating
+an empathy AI agent for online peer-mediated mental health intervention (Easton <i>et al</i>, <i>in preparation</i>).
 
 Funded by EU, John Hopkins workshop grant, MRC (Confidence in Concept) Round 6, Rosetrees Trust, CLARHC
 and SHSC RCF NIHR.
