--- a/_pages/research.html
+++ b/_pages/research.html
@@ -18,14 +18,21 @@ computational models.
 
 <h2>Automatic speech recognition for atypical voices </h2>
 Sheffield has a long-standard track record in this area. We were the first to introduce more mainstream techniques
-like deep-learning to improve performance (e.g., Christensen <i>et al</i>, 2012; Christensen <i>et al</i>, 2013a; Christensen
-<i>et al</i>, 2013b). In the <a href="projects/past/homeservice">homeService</a>) we implemented an online system that we deployed in people's houses long-term. This was the
-demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able us 
+like deep-learning to improve performance (e.g., Christensen <i>et al</i>, 2012; Christensen <i>et al</i>, 2013a;
+Christensen
+<i>et al</i>, 2013b). In the <a href="../projects/past/homeservice">homeService</a>) we implemented an online system
+that we deployed in people's houses long-term. This was the
+demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able
+us
 to demonstrate state-of-the-art performance for the users. We have subsequently made the collected database
-<a href="http://mini.dcs.shef.ac.uk/resources/homeservice-corpus">public</a>): (e.g., Green <i>et al</i>, 2016; Nicolao <i>et al</i>, 2016; Malavasi <i>et al</i>, 2016). We extended this work (Google
-Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory representations (Xiong <i>et al</i>, 2018, 2019,
-2020). Currently, an ESR on the H2020 ITN-ETN <a href="projects/current/tapas">TAPAS</a> ESRs works on improving continuous dysarthric speech
-recognition (Yue <i>et al</i>, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition and
+<a href="http://mini.dcs.shef.ac.uk/resources/homeservice-corpus">public</a>): (e.g., Green <i>et al</i>, 2016; Nicolao
+<i>et al</i>, 2016; Malavasi <i>et al</i>, 2016). We extended this work (Google
+Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory
+representations (Xiong <i>et al</i>, 2018, 2019,
+2020). Currently, an ESR on the H2020 ITN-ETN <a href="projects/current/tapas">TAPAS</a> ESRs works on improving
+continuous dysarthric speech
+recognition (Yue <i>et al</i>, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition
+and
 detection of linguistic as well as paralinguistic information in speech (Alhinti <i>et al</i>, 2018, 2020a, 2020b)
 
 Funded
@@ -37,16 +44,20 @@ As part of a multi-disciplinary team
 involving neuroscientists, neuropsychologists, a clinical linguist and a general practitioner, I have led the technical
 work on developing a stratification test for people with memory concerns where a virtual agent asks memory-probing
 questions and the underlying speech analysis and machine learning looks for signs of neurodegenerative dementia in a
-person's speech and language (Mirheidari <i>et al</i>, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
+person's speech and language (Mirheidari <i>et al</i>, 2016; 2017a; 2017b; 2018, 2019, 2020). Currently, an ESR on TAPAS
+is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
 2020a, 2020b). In 2019 Blackburn and myself received the Rosetrees Trust Interdisciplinary Prize for AI and medicine to
-port this technology to work for assessing cognitive health for stroke survivors, [<a href="projects/current/compass">COMPASS</a>. In 2019, we took the
-<a href=www.cognospeak.org>CognoSpeak</a> system to <a href="projects/current/kenya">Kenya"</a> to work with a local neurologist (GRCF pump priming funds) to
+port this technology to work for assessing cognitive health for stroke survivors, [<a
+    href="projects/current/compass">COMPASS</a>. In 2019, we took the
+<a href=www.cognospeak.org>CognoSpeak</a> system to <a href="projects/current/kenya">Kenya"</a> to work with a local
+neurologist (GRCF pump priming funds) to
 begin work on exploring how to make the underpinning speech analytics more language-agnostic. Recently, I have started
 working with Thomas, one of the CDT students on a PhD collaboration with Apple on speech and language-based
 automatic tracking of depression and enxiety. Related, my PhD student Attas is developing a system for automatically
 analysing psychotherapy-client sessions with the aim of detecting clues for potential rupture. Wider applications of the
 use of conversational agents in therapy include a motivational system for people with COPS that was co-created and had
-an initial evaluation of a prototype system (Easton <i>et al</i> 2020), and the exploration of a similar system for creating
+an initial evaluation of a prototype system (Easton <i>et al</i> 2020), and the exploration of a similar system for
+creating
 an empathy AI agent for online peer-mediated mental health intervention (Easton <i>et al</i>, <i>in preparation</i>).
 
 Funded by EU, John Hopkins workshop grant, MRC (Confidence in Concept) Round 6, Rosetrees Trust, CLARHC
