--- a/_pages/research.html
+++ b/_pages/research.html
@@ -20,7 +20,7 @@ computational models.
 Sheffield has a long-standard track record in this area. We were the first to introduce more mainstream techniques
 like deep-learning to improve performance (e.g., Christensen <i>et al</i>, 2012; Christensen <i>et al</i>, 2013a;
 Christensen
-<i>et al</i>, 2013b). In the <a href="../projects/past/homeservice">homeService</a>) we implemented an online system
+<i>et al</i>, 2013b). In the <a href="../projects/past/homeService">homeService</a>) we implemented an online system
 that we deployed in people's houses long-term. This was the
 demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able
 us
@@ -29,7 +29,7 @@ to demonstrate state-of-the-art performance for the users. We have subsequently 
 <i>et al</i>, 2016; Malavasi <i>et al</i>, 2016). We extended this work (Google
 Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory
 representations (Xiong <i>et al</i>, 2018, 2019,
-2020). Currently, an ESR on the H2020 ITN-ETN <a href="projects/current/tapas">TAPAS</a> ESRs works on improving
+2020). Currently, an ESR on the H2020 ITN-ETN <a href="../projects/current/tapas">TAPAS</a> ESRs works on improving
 continuous dysarthric speech
 recognition (Yue <i>et al</i>, 2020a, 2020b). Related, my PhD student Alhinti is working on the automatic recognition
 and
