--- a/_pages/research.html
+++ b/_pages/research.html
@@ -48,8 +48,8 @@ person's speech and language (Mirheidari <i>et al</i>, 2016; 2017a; 2017b; 2018,
 is working with Philips on home-based monitoring for dementia (Pan *et al* 2019,
 2020a, 2020b). In 2019 Blackburn and myself received the Rosetrees Trust Interdisciplinary Prize for AI and medicine to
 port this technology to work for assessing cognitive health for stroke survivors, [<a
-    href="projects/current/compass">COMPASS</a>. In 2019, we took the
-<a href=www.cognospeak.org>CognoSpeak</a> system to <a href="projects/current/kenya">Kenya"</a> to work with a local
+    href="../projects/current/compass">COMPASS</a>. In 2019, we took the
+<a href=www.cognospeak.org>CognoSpeak</a> system to <a href="../projects/current/kenya">Kenya"</a> to work with a local
 neurologist (GRCF pump priming funds) to
 begin work on exploring how to make the underpinning speech analytics more language-agnostic. Recently, I have started
 working with Thomas, one of the CDT students on a PhD collaboration with Apple on speech and language-based
