--- a/_pages/research.html
+++ b/_pages/research.html
@@ -25,7 +25,7 @@ that we deployed in people's houses long-term. This was the
 demonstration system for an EPSRC programme grant. The system was one of the first cloud-based systems and we were able
 us
 to demonstrate state-of-the-art performance for the users. We have subsequently made the
-<a href="http://mini.dcs.shef.ac.uk/resources/homeservice-corpus">collected database</a>) public: (e.g., Green <i>et
+<a href="http://mini.dcs.shef.ac.uk/resources/homeservice-corpus">collected database</a> public: (e.g., Green <i>et
     al</i>, 2016; Nicolao
 <i>et al</i>, 2016; Malavasi <i>et al</i>, 2016). We extended this work (Google
 Research Award; [DeepArt](projects/past/deepart)) by exploring the use of deep-learning to obtain articulatory
